# brain_street_view

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  bsv_example.m  bsv_fetchConnectivityData.asv  bsv_fetchConnectivityData.m  bsv_fetchConnectivityDataJF.m  bsv_fetchConnectivityImages.m  bsv_fetchConnectivitySummary.m  bsv_findConnectivityExperiments.m  bsv_pipelineJF.m  bsv_plotConnectivity.asv  bsv_plotConnectivity.m  bsv_plotConnectivity3D.m  example.ipynb  example.py  example_analyzeCPSubregions_csv.m  example_custom_atlas.m  example_striatum.ipynb  gettingStarted.mlx  nsv_example.asv  nsv_example.m  nsv_fetchConnectivityData.asv  nsv_fetchConnectivityData.m  nsv_fetchConnectivityImages.m  nsv_fetchConnectivitySummary.m  nsv_findConnectivityExperiments.m  nsv_plotConnectivity.asv  nsv_plotConnectivity.m  nsv_plotConnectivity3D.asv  nsv_plotConnectivity3D.m  nsv_plotProjectionData.m  paper.bib  paper.md  pyproject.toml  testy_test.asv  (+1 more)
+bsv/: analyzeCPSubregions.m  combined_image.mat  example.m  example_striatum.m  fetchConnectivityData.m  fetchConnectivityImages.m  fetchConnectivitySummary.m  findConnectivityExperiments.m  plotConnectivity.asv  plotConnectivity.m  plotConnectivity3D.m  plotConnectivityMatrix.m  plotConnectivityMultiRegion.m  plotConnectivityWithSubregionAnalysis.m  plotInjectionsCombined.m  plotMultiRegionInjections.m  thresholdConnectivity.m
100141219/: data_set.xml  injectionSummary_all.json
180296424/: data_set.xml  density.mhd
MATLAB/: gettingStarted.mlx
bsv/: __init__.py  analyze_cp_subregions.py  atlas_utils.py  fetch_connectivity_data.py  fetch_connectivity_images.py  fetch_connectivity_summary.py  fetch_upstream_regions.py  find_connectivity_experiments.py  plot_connectivity.py  plot_connectivity_3d.py  plot_connectivity_matrix.py  plot_connectivity_multi_region.py  plot_connectivity_with_subregion_analysis.py  plot_injections_combined.py  plot_multi_region_injections.py  plot_upstream_projectome.py  threshold_connectivity.py
docs/: allenAtlasProjection_info.csv  api.md  compare_regions.md  conf.py  contributing.md  examples.md  find_and_fetch.md  find_experiments.md  generate_images.py  generate_striatum_fig.py  getting_started.md  index.md  interactive_viewer.md  make_paper_figure.py  matlab.md  papers.md  plot_2d.md  plot_3d.md  plot_injections.md  quickstart.md  requirements.txt  striatum_analysis.md  thresholding.md  upstream_projectome.md
images/: doc_list.md  visualInjections.avi
(+57 files in other folders)
