[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-street-view"
version = "0.1.1"
description = "Load and plot Allen Mouse Brain Connectivity data"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Julie M. Fabre", email = "juliemfabre@gmail.com"},
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "requests",
    "scikit-image",
]

[project.optional-dependencies]
dev = ["pytest"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["neuroscience", "connectomics", "Allen Brain Atlas", "mouse brain", "striatum", "visualization"]

[project.urls]
Homepage = "https://github.com/Julie-Fabre/brain_street_view"
Documentation = "https://brain-street-view.readthedocs.io"
Repository = "https://github.com/Julie-Fabre/brain_street_view"
Issues = "https://github.com/Julie-Fabre/brain_street_view/issues"
Changelog = "https://github.com/Julie-Fabre/brain_street_view/releases"

[tool.setuptools.packages.find]
include = ["bsv*"]

[tool.setuptools.package-data]
"*" = ["*.csv"]
